--- a/src/v1/fonts.css
+++ b/src/v1/fonts.css
@@ -21,3 +21,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'GilroyLight';
+    src: url("../../fonts/GilroyLight/GilroyLight.woff2") format("woff2");
+    font-display: swap;
+    font-weight: normal;
+    font-style: normal;
+}
