--- a/src/v1/index.css
+++ b/src/v1/index.css
@@ -18,7 +18,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: GilroyRegular, sans-serif;
+    font-family: GilroyLight, sans-serif;
     letter-spacing: 0.02em;
     font-size: 16px;
     line-height: 1.5em;
